phase 1 code